<resources>
    <string name="app_name">GSquad</string>
    <string name="action_add_friends">Add Friends</string>
    <string name="facebook_application_id" translatable="false">1785392411486722</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_provider_id" translatable="false">facebook.com</string>
    <string name="google_provider_id" translatable="false">google.com</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_and_feedback">Feedback</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="signed_in_label">You are signed in!</string>
    <string name="signed_out_label">Sign in canceled</string>
    <string name="title_activity_friend_list">Find Friends</string>
    <string name="device_unsupported">This device is not supported.</string>
    <string name="request_sent">has sent a friend invite.</string>
    <string name="tab_title_games">Games</string>
    <string name="tab_title_friends">Friends</string>
    <string name="tab_title_notifications">Notifications</string>
    <string name="title_activity_add_game">Add Games</string>
    <string name="search_button_label">Search</string>
    <string name="search_placeholder">Enter title or keyword of game</string>
    <string name="thumbnail_label">Game Thumbnail</string>
    <string name="selected_label">Selected Game</string>
    <string name="selected_count_label">1 Game Selected</string>
    <string name="submit">Submit</string>
    <string name="single_game_string">Game added to your library.</string>
    <string name="multiple_game_string">Games added to your library.</string>
    <string name="no_connection_available">No internet connection available.</string>
    <string name="no_games_found">No games found in your library. Please add games by clicking the icon below.</string>
    <string name="no_friends_found">No friends found in your friend list. Please add friends by clicking the icon below.</string>
    <string name="title_activity_add_friend">Select a Game from your library</string>
    <string name="title_activity_find_friends">Nearby Gamers</string>
    <string name="user_pic_label">User Profile Picture</string>
    <string name="anonymous_user">Anonymous</string>
    <string name="no_games_available">No games are available in your library. Go back to Games tab to add games first.</string>
    <string name="no_nearby_users_available">Sorry! No nearby gamers are available for this game.</string>
    <string name="distance_label">km away</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="background_label">Background Picture</string>
    <string name="cover_pic">Game Cover</string>
    <string name="profile_content_label">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="title_activity_game_details">GameDetailsActivity</string>
    <string name="rating_label">Ratings :</string>
    <string name="summary_label">Summary :</string>
    <string name="no_rating_available">No Rating Available</string>
    <string name="no_summary_available">No Summary Available</string>
    <string name="user_no_game_available">No Games Found.</string>
    <string name="games_owned_label">Games Owned :</string>
    <string name="friend_request_sent">Friend Request Sent</string>
    <string name="no_notification_available">No new notifications are available</string>
    <string name="accept_icon_label">Accept Request Button</string>
    <string name="decline_icon_label">Decline Request Button</string>
    <string name="send_invite_label">has been invited to your friend list.</string>
    <string name="receive_invite_label">has invited you to their friend list.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feedback_email">feedback@gsquad.com</string>
    <string name="feedback_subject">Regarding the feedback of GSquad</string>
    <string name="email_chooser">Send mail via</string>
    <string name="no_clients_available">No Email Clients are installed.</string>
    <string name="share_app_info">Check out this app - GSQUAD. An app made exclusively for gamers</string>
    <string name="invite_accepted">Invite Accepted!</string>
    <string name="invite_declined">Invite Declined!</string>
    <string name="remove_friend_label">UNFRIEND</string>
    <string name="empty_game_list">No games are found. Please try again later.</string>

    <!-- Strings related to Settings -->
    <string name="pref_range_label">Range To Find Gamers</string>
    <string name="pref_dialog_label">Range</string>
    <string name="pref_range_label_ten_kilometers">Within 10 Kilometers</string>
    <string name="pref_range_label_fifty_kilometers">Within 50 Kilometers</string>
    <string name="pref_range_label_hundred_kilometers">Within 100 Kilometers</string>
    <string name="pref_range_key" translatable="false">range</string>
    <string name="pref_range_ten_kilometers" translatable="false">10000</string>
    <string name="pref_range_fifty_kilometers" translatable="false">50000</string>
    <string name="pref_range_hundred_kilometers" translatable="false">100000</string>
    <string name="pref_range_default" translatable="false">10000</string>

    <!--  Strings related to Distance Shown to other user preference -->
    <string name="pref_show_distance_key" translatable="false">show_distance</string>
    <string name="pref_show_distance_label">Show Your Location</string>
    <string name="pref_show_distance_true">Enabled</string>
    <string name="pref_show_distance_false">Not Enabled</string>
    <string name="pref_show_distance_default" translatable="false">true</string>

    <string name="title_widget_status">GSquad User Status</string>
    <string name="online_status_label">Online Label</string>
    <string name="online_status">Online</string>
    <string name="away_status_label">Away Label</string>
    <string name="away_status">Away</string>
    <string name="offline_status_label">Offline Label</string>
    <string name="offline_status">Offline</string>

    <string name="map_label">Check on Maps</string>
</resources>
