<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_range_key"
        android:title="@string/pref_range_label"
        android:dialogTitle="@string/pref_dialog_label"
        android:entries="@array/pref_range_options"
        android:entryValues="@array/pref_range_values"
        android:defaultValue="@string/pref_range_ten_kilometers" />

    <CheckBoxPreference
        android:title="@string/pref_show_distance_label"
        android:key="@string/pref_show_distance_key"
        android:summaryOff="@string/pref_show_distance_false"
        android:summaryOn="@string/pref_show_distance_true"
        android:defaultValue="@string/pref_show_distance_default" />
</PreferenceScreen>