<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_person_black_36dp"/>
        <item
            android:id="@+id/settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings_black_36dp"/>
        <item
            android:id="@+id/feedback"
            android:title="@string/menu_help_and_feedback"
            android:icon="@drawable/ic_feedback_black_36dp"/>
        <item
            android:id="@+id/share"
            android:title="@string/menu_share"
            android:icon="@drawable/ic_share_black_36dp"/>
        <item
            android:id="@+id/logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/logout"/>
    </group>
</menu>