<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/linear_padding_top_bottom"
    android:layout_marginBottom="@dimen/linear_padding_top_bottom">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_pic"
        android:layout_width="@dimen/user_notification_image_view"
        android:layout_height="@dimen/user_notification_image_view"
        android:src="@drawable/no_image"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/image_padding_top_bottom"
        android:contentDescription="@string/user_pic_label" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/notification_status_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:fontFamily="sans-serif"
            android:paddingStart="@dimen/notification_status_padding"
            android:paddingEnd="@dimen/notification_status_padding"/>

        <LinearLayout
            android:id="@+id/action_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/accept_action_icon"
                android:layout_width="@dimen/action_image_view"
                android:layout_height="@dimen/action_image_view"
                android:layout_marginStart="@dimen/profile_pic_notification_margin_start"
                android:layout_marginEnd="@dimen/profile_pic_notification_margin_end"
                android:src="@drawable/ic_check_white_36dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:contentDescription="@string/accept_icon_label"
                android:background="@color/green"/>

            <ImageButton
                android:id="@+id/decline_action_icon"
                android:layout_width="@dimen/action_image_view"
                android:layout_height="@dimen/action_image_view"
                android:layout_marginStart="@dimen/profile_pic_notification_margin_start"
                android:layout_marginEnd="@dimen/profile_pic_notification_margin_end"
                android:src="@drawable/ic_close_white_36dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:contentDescription="@string/decline_icon_label"
                android:background="@color/red"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>