<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.gsquad.activity.GameDetailsActivity"
    tools:showIn="@layout/activity_game_details">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/game_cover_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cover_pic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/game_scrim_shape" />

        <ProgressBar
            android:id="@+id/progress_bar_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/game_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearance"
            android:textSize="@dimen/game_title_text_size"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:paddingStart="@dimen/game_title_padding_start"
            android:paddingEnd="@dimen/game_title_padding_start"
            android:layout_marginBottom="@dimen/image_padding_top_bottom"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/image_padding_top_bottom"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rating_label_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:fontFamily="sans-serif"
                    android:text="@string/rating_label"/>

                <TextView
                    android:id="@+id/rating_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:fontFamily="sans-serif" />
            </LinearLayout>

            <TextView
                android:id="@+id/summary_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/summary_label"
                android:textAppearance="?android:textAppearanceMedium"
                android:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:fontFamily="sans-serif"
                android:layout_marginBottom="@dimen/image_padding_top_bottom"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
